# torsion_scan_guardian

./: .dockerignore  .gitignore  CHECKPOINTS.md  CONTRIBUTING.md  Colab_WAY.md  Dockerfile  LICENSE  README.md  REPORT.md  Thunder_WAY.md  Torsion_Scan_Guardian_Project.md  VastAI_WAY.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml
config/molecules/: glycine_zwitterion.yaml  ibuprofen.yaml  sulfanilamide.yaml
data/molecule_library/: README.md  candidates.csv
data/seed/: biphenyl_seed.xyz  caffeine_seed.xyz  diglycine_seed.xyz  glycine_zwitterion_seed.xyz  ibuprofen_seed.xyz  n_methylacetamide_seed.xyz  norbornadiene_seed.xyz  sulfanilamide_seed.xyz  sulfonyl_chloride_seed.xyz
notebooks/: README.md  guardian_colab.ipynb  guardian_sweep_colab.ipynb
notebooks/colab/: guardian_colab.ipynb  guardian_sweep_colab.ipynb
notebooks/thunder/: guardian_sweep_thunder.ipynb  guardian_thunder.ipynb
notebooks/vastai/: guardian_sweep_vastai.ipynb  guardian_vastai.ipynb
scripts/: analyse_al_demo.py  build_bootstrap_splits.py  build_seed_dataset.py  compare_al_vs_baseline.py  diagnose_ood.py  diagnose_torsion.py  finetune_member.py  make_phase2_figures.py  make_report_figures.py  run_guardian.py  sulf_ood_probe.py  sweep_molecules.py
src/guardian/: calibration.py  cli.py  config.py  stability.py
src/guardian/io/: structures.py
src/guardian/md/: driver.py
src/guardian/models/: ensemble.py
src/guardian/oracle/: gfnff.py  xtb_subprocess.py
src/guardian/pipeline/: controller.py
src/guardian/training/: finetune.py  replay.py
src/guardian/uncertainty/: monitor.py
src/guardian/viz/: torsion_scan.py
tests/: test_calibration.py  test_config.py  test_ensemble_smoke.py  test_monitor.py  test_replay.py  test_stability.py
