[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardian"
version = "0.1.0"
description = "Torsion Scan Guardian: Active Learning for ML Force Field stability"
requires-python = ">=3.11"
readme = "Torsion_Scan_Guardian_Project.md"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
guardian = "guardian.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
